samples/_failures_safe/1761286936_52a392_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d4bfc99.c: In function ‘main’:
./samples/SAFE/__tmp_9d4bfc99.c:158:17: error: expected declaration or statement at end of input
  158 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_9d4bfc99.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d4bfc99.c:158:17: error: expected declaration or statement at end of input
